# animate-test-addons

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/: FUNDING.yml
altblocker/: CMakeLists.txt  README.md
altblocker/src/: main.cc
animate11/: CMakeLists.txt  README.md
animate11/src/: main.cc  main.cpp  theme.h
lib/animate_jsapi/: CMakeLists.txt
lib/animate_jsapi/include/animate/: jsapi.h  mm_jsapi.h
lib/animate_jsapi/include/jsapi/: api.h
qt-in-animate/: CMakeLists.txt  README.md
qt-in-animate/data/themes/: base.qss  dark.qss
qt-in-animate/src/: main.cc
scripts/: install.ps1
